--- a/realmate_challenge/pyproject.toml
+++ b/realmate_challenge/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8"
 djangorestframework = "^3.14"
+drf-spectacular = "^0.28.0"
 
 
 [build-system]
