configs for deploy in render

--- a/realmate_challenge/pyproject.toml
+++ b/realmate_challenge/pyproject.toml
@@ -5,6 +5,9 @@ description = ""
 authors = ["Marcos-Dantas22 <marcosdantaslkdin@gmail.com>"]
 readme = "README.md"
 
+[tool.poetry.scripts]
+gunicorn = "gunicorn.app.wsgiapp:run"
+
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 djangorestframework = "^3.14"
@@ -12,6 +15,8 @@ python-decouple = "^3.8"
 sentry-sdk = {extras = ["django"], version = "^2.27.0"}
 drf-spectacular = "^0.28.0"
 google-generativeai = "^0.8.5"
+gunicorn = "^21.2.0"
+psycopg2-binary = "^2.9.9"  # ou asyncpg se for async
 
 
 [build-system]
