--- a/render.yml
+++ b/render.yml
@@ -6,9 +6,9 @@ services:
     buildCommand: ./build.sh
     startCommand: cd realmate_challenge && poetry run gunicorn realmate_challenge.wsgi:application --bind 0.0.0.0:$PORT
     envVars:
-      - key: DJANGO_SECRET_KEY
+      - key: SECRET_KEY
         generateValue: true
-      - key: DJANGO_DEBUG
+      - key: DEBUG
         value: "False"
       - key: DATABASE_URL
         fromDatabase:
