--- a/realmate_challenge/pyproject.toml
+++ b/realmate_challenge/pyproject.toml
@@ -17,6 +17,7 @@ drf-spectacular = "^0.28.0"
 google-generativeai = "^0.8.5"
 gunicorn = "^21.2.0"
 psycopg2-binary = "^2.9.9"  # ou asyncpg se for async
+django-cors-headers = "^4.7.0"
 
 
 [build-system]
