--- a/realmate_challenge/pyproject.toml
+++ b/realmate_challenge/pyproject.toml
@@ -18,6 +18,7 @@ google-generativeai = "^0.8.5"
 gunicorn = "^21.2.0"
 psycopg2-binary = "^2.9.9"  # ou asyncpg se for async
 django-cors-headers = "^4.7.0"
+whitenoise = "^6.9.0"
 
 
 [build-system]
